# nfract

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/app/: Application.hpp  ArgumentsParser.hpp
include/core/: Image.hpp  RenderNewton.hpp  RenderNewtonCpu.hpp  RootsTable.hpp
scripts/: render_compare.ps1  render_compare.sh
src/: Main.cpp
src/app/: Application.cpp  ArgumentsParser.cpp
src/core/: Image.cpp  RenderNewton.cpp  RenderNewtonCpu.cpp  RootsTable.cpp
src/kernel/: Newton.ispc
tests/: CMakeLists.txt
tests/src/app/: ApplicationTest.cpp  ArgumentsParserTest.cpp
tests/src/core/: ImageTest.cpp  RenderNewtonTest.cpp  RootsTableTest.cpp
tests/src/support/: TestUtils.hpp
